fix courses view on mobile landscape orientation

--- a/Uspeak/Uspeak/ClientApp/src/styles/course.module.css
+++ b/Uspeak/Uspeak/ClientApp/src/styles/course.module.css
@@ -8,3 +8,9 @@
         width: 88vw;
     }
 }
+
+@media (orientation: landscape ) and (max-width: 1080px){
+    .course {
+        width: 95vw;
+    }
+}
